--- a/.src/111/.group.org
+++ b/.src/111/.group.org
@@ -36,3 +36,10 @@
    - 覃秋菊
    - 李远源
    - 黄必旺
+
+网课分组
+- [韩先午] 薛有彬 梁恩宁 吴标 郭松鹏 刘少钦 黄必旺 李远源
+- [陈智源] 陈展群 张豪 黎文鑫 高雁 唐海 钟宇杨 黎绍伟
+- [覃秋菊] 陈永旺 李天娇 彭邦栋 杨正进 郑钧洹 唐迪 蔡正旺
+- [李学文] 欧阳华健 欧阳轩 周晓乐 黄远坤 卢传君 秦汉 李晓辉
+     
